# gearpy

./: .readthedocs.yaml  README.md  README.rst  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: linux_test.yml  macos_test.yml  release.yml  tests.yml  windows_test.yml
docs/source/: conf.py  gearpy.rst  get_started.rst  index.rst  installation.md  requirements.txt
gearpy/: __init__.py  functions.py  powertrain.py  sensors.py  solver.py  transmission.py
gearpy/gear/: __init__.py  gear.py  gear_base.py  spur_gear.py
gearpy/mechanical_object/: __init__.py  mechanical_object.py  mechanical_object_base.py  mechanical_objects.py  rotating_object.py
gearpy/mechanical_objects/: __init__.py  dc_motor.py  flywheel.py  helical_gear.py  mating_roles.py  mechanical_object_base.py  spur_gear.py  worm_gear.py  worm_wheel.py
gearpy/motor/: __init__.py  dc_motor.py  motor.py  motor_base.py
gearpy/motor_control/: __init__.py  motor_control.py  motor_control_base.py  pwm_control.py  rules.py
gearpy/sensors/: __init__.py  absolute_rotary_encoder.py  amperometer.py  sensor_base.py  tachometer.py  timer.py
gearpy/solver/: solver.py
gearpy/transmission/: __init__.py  transmission.py
gearpy/units/: __init__.py  acceleration.py  angle.py  angular_acceleration.py  angular_position.py  angular_speed.py  concrete_units.py  inertia.py  inertia_moment.py  settings.py  speed.py  time.py  time_interval.py  torque.py  unit_base.py  units.py
gearpy/utils/: __init__.py  animate.py  (+2 more)
requirements/: common.txt  docs.txt  tests.txt
tests/: conftest.py  test_dc_motor.py  test_rotating_object.py  test_solver.py  test_spur_gear.py  test_transmission.py  test_utils.py
(+611 files in other folders)
